# aeroops

./: .gitignore
aeroops_bringup/: CMakeLists.txt  package.xml
aeroops_bringup/launch/: aeroops_components.launch.py  display.launch.py  gz_sim.launch.py  px4_rviz.launch.py
aeroops_bringup/rviz2/: config.rviz  px4_x500.rviz
aeroops_bringup/worlds/: world.sdf
aeroops_core/: CMakeLists.txt  package.xml
aeroops_core/include/aeroops_core/: mission_manager.hpp
aeroops_core/src/: mission_manager.cpp
aeroops_description/: CMakeLists.txt  package.xml
aeroops_description/urdf/: aeroops.urdf.xacro  inertial_macros.xacro  materials.xacro  rotors.xacro  sensors.xacro
aeroops_interfaces/: CMakeLists.txt  package.xml
aeroops_interfaces/msg/: MissionStatus.msg  VehicleState.msg
aeroops_interfaces/srv/: ArmDisarm.srv  SaveSnapshot.srv  StartMission.srv  UploadMission.srv
aeroops_perception/: CMakeLists.txt  package.xml
aeroops_perception/include/aeroops_perception/: camera_monitor_node.hpp
aeroops_perception/src/: camera_monitor_node.cpp
aeroops_px4/: CMakeLists.txt  package.xml
aeroops_px4/include/aeroops_px4/: offboard_control_node.hpp
aeroops_px4/launch/: offboard_mission.launch.py  offboard_takeoff.launch.py
aeroops_px4/src/: camera_frame_relay_node.cpp  offboard_control_node.cpp  px4_tf_bridge_node.cpp
